test/ui/test/packages/faulty-component-paths/three/package.metadata
# TEST fail check

name: test,
version: "0.0.0",

components: [
    {
        type: executable,
        path: "leading/astray",
    },
],
